monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     };
//     virtual ~PendingTransaction() = 0;
//     virtual int status() const = 0;
extern ADDAPI int MONERO_PendingTransaction_status(void* pendingTx_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_errorString(void* pendingTx_ptr);
//     virtual bool commit(const std::string &filename = "", bool overwrite = false) = 0;
extern ADDAPI bool MONERO_PendingTransaction_commit(void* pendingTx_ptr, const char* filename, bool overwrite);
extern ADDAPI const char* MONERO_PendingTransaction_commitUR(void* pendingTx_ptr, int max_fragment_length);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_amount(void* pendingTx_ptr);
//     virtual uint64_t dust() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_dust(void* pendingTx_ptr);
//     virtual uint64_t fee() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_fee(void* pendingTx_ptr);
//     virtual std::vector<std::string> txid() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_txid(void* pendingTx_ptr, const char* separator);
//     virtual uint64_t txCount() const = 0;
extern ADDAPI uint64_t MONERO_PendingTransaction_txCount(void* pendingTx_ptr);
//     virtual std::vector<uint32_t> subaddrAccount() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_subaddrAccount(void* pendingTx_ptr, const char* separator);
//     virtual std::vector<std::set<uint32_t>> subaddrIndices() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_subaddrIndices(void* pendingTx_ptr, const char* separator);
//     virtual std::string multisigSignData() = 0;
extern ADDAPI const char* MONERO_PendingTransaction_multisigSignData(void* pendingTx_ptr);
//     virtual void signMultisigTx() = 0;
extern ADDAPI void MONERO_PendingTransaction_signMultisigTx(void* pendingTx_ptr);
//     virtual std::vector<std::string> signersKeys() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_signersKeys(void* pendingTx_ptr, const char* separator);
//     virtual std::vector<std::string> hex() const = 0;
extern ADDAPI const char* MONERO_PendingTransaction_hex(void* pendingTx_ptr, const char* separator);
//     };
//     virtual ~UnsignedTransaction() = 0;
//     virtual int status() const = 0;
extern ADDAPI int MONERO_UnsignedTransaction_status(void* unsignedTx_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_errorString(void* unsignedTx_ptr);
//     virtual std::vector<uint64_t> amount() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_amount(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<uint64_t>  fee() const = 0;
extern ADDAPI const char* MONERO_UnsignedTransaction_fee(void* unsignedTx_ptr, const char* separator);
extern ADDAPI void MONERO_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));